--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
 
   <body>
@@ -48,9 +48,35 @@
             &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p>
           <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest instead of requiring its 3D model or video footage capturing multiple viewpoints around the object.</font></p>
-          <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
-          <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" style="margin-top: 0 !important;" href="https://github.com/jcorsetti/oryon"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/oryon"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <!-- <a class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><strong>reference</strong></a>
+            <ul class="dropdown-menu">
+              <p class="text-left">
+                <pre><code>
+                @inproceedings{corsetti2024oryon,
+                  title = {Open-vocabulary object 6D pose estimation},
+                  author = {Corsetti, Jaime and Boscaini, Davide and Oh, Changjae and Cavallaro, Andrea and Poiesi, Fabio},
+                  journal = {IEEE/CVF Computer Vision and Pattern Recognition Conference (CVPR)},
+                  year = {2024}
+                }
+                </code></pre>
+              </p>
+            </ul> -->
+
+
+
+
+          <!-- <div class="dropdown">
+            
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div> -->
+
           <p></p>
         </li>
 
@@ -142,7 +168,7 @@
           <a class="btn btn-primary btn-sm" href="https://github.com/fabiopoiesi/monet_dataset"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
         </li>
 
-        <!-- PAMI 2023 -->
+        <!-- TPAMI 2023 -->
         <li class="list-group-item list-group-item-action">
           <figure class="figure">
             <img src="data/thumb/2023_PAMI_GeDi.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height:120px">
@@ -151,7 +177,7 @@
             <h5 class="mb-1">Learning general and distinctive 3D local deep descriptors for point cloud registration</h5>
           </div>
           <p class="mb-1">Fabio Poiesi, <strong>Davide Boscaini</strong></p>
-          <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (PAMI)</i>, 2023</p>
+          <p class="mb-1"><i>Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i>, 2023</p>
           <p class="mb-1"><font color="#899499">TL;DR: State-of-the-art performance for point cloud registration in the transfer learning setting across 3DMatch, ETH, and Kitti datasets</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2105.10382"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
@@ -361,7 +387,7 @@
           <p class="mb-1">Federico Monti<font color="#899499">*</font>, <strong>Davide Boscaini</strong><font color="#899499">*</font>, Jonathan Masci, Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein 
             &emsp; <font color="#899499">(* denotes equal contibution)</font></p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017
-              &mdash; <font color="#a21a2a">Oral presentation</font></p>
+              &mdash; <font color="#a21a2a">Oral presentation (0.8% acceptance rate)</font></p>
 
           <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/1611.08402"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
@@ -383,7 +409,7 @@
           <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/1605.06437"><i class="ai ai-arxiv ai-1x"></i>&nbsp;<strong>arxiv</strong></a>
           <a class="btn btn-primary btn-sm" href="https://github.com/davideboscaini/acnn"><i class="fa fa-github"></i>&nbsp;<strong>code</strong></a>
           <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1jYavG5ICS1QLbGj4Te_C9z1fwqEDf5zq/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
-      </li>
+        </li>
 
         <!-- EG 2016 -->
         <li class="list-group-item list-group-item-action">
@@ -399,7 +425,7 @@
 
           <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/16xwzZCNSs2KwO78horEVBAjhfQWR2vio/view?usp=sharing"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;<strong>pdf</strong></a>
           <a class="btn btn-primary btn-sm" href="https://drive.google.com/file/d/1CBgn1OzF06Sq9oE2CTPosq7VNSalBNOI/view?usp=sharing"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;<strong>biblio</strong></a>
-      </li>
+        </li>
 
         <!-- SGP 2015 -->
         <li class="list-group-item list-group-item-action">
@@ -412,7 +438,7 @@
           <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Simone Melzi, Michael M. Bronstein, Umberto Castellani, Pierre Vandergheynst</p>
           <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
             &mdash; <font color="#a21a2a">Oral presentation at SGP 2015</font></p>
-      </li>
+        </li>
 
         <!-- ICCV-W 2015 -->
         <li class="list-group-item list-group-item-action">
@@ -426,7 +452,7 @@
             &emsp; <font color="#899499">(* denotes equal contibution)</font></p>
           <p class="mb-1"><i>ICCV Workshop on 3D Representation and Recognition (3dRR)</i>, 2015
             &mdash; <font color="#a21a2a">Oral presentation</font></p>
-      </li>
+        </li>
 
         <!-- EG 2015 -->
         <li class="list-group-item list-group-item-action">
@@ -439,7 +465,7 @@
           <p class="mb-1"><strong>Davide Boscaini</strong>, Davide Eynard, Drosos Kourounis, Michael M. Bronstein</p>
           <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
             &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font></p>
-      </li>
+        </li>
 
         <!-- 3DOR 2014 -->
         <li class="list-group-item list-group-item-action">
@@ -452,7 +478,7 @@
           <p class="mb-1"><strong>Davide Boscaini</strong>, Ramunas Girdziusaz, Michael M. Bronstein</p>
           <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2014
             &mdash; <font color="#a21a2a">Oral presentation</font></p>
-      </li>
+        </li>
 
         <!-- TVC 2014 -->
         <li class="list-group-item list-group-item-action">
@@ -464,7 +490,7 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
           <p class="mb-1"><i>The Visual Computer (TVC)</i>, 2014</p>
-      </li>
+        </li>
 
         <!-- 3DOR 2013 -->
         <li class="list-group-item list-group-item-action">
@@ -483,6 +509,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
   </body>
 </html>
