--- a/publications.html
+++ b/publications.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+    <link rel="stylesheet" href="custom.css">
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand">Davide Boscaini</a>
+        <a class="navbar-brand">Davide <strong>Boscaini</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +23,7 @@
               <a class="nav-link" aria-current="page" href="index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="publications.html">Publications</a>
+              <a class="nav-link active" href="publications.html"><strong>Publications</strong></a>
             </li>
           </ul>
         </div>
@@ -33,6 +34,10 @@
       <ul class="list-group list-group-flush">
 
         <h2>Papers</h2>
+        <p>(In reversed chronological order)</p>
+
+        <!-- <li class="list-group-item list-group-item-action">
+        </li> -->
 
         <!-- CVPR 2024 -->
         <li class="list-group-item list-group-item-action">
@@ -48,9 +53,18 @@
           <p class="mb-1"><font color="#899499">TL;DR: We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest instead of requiring its 3D model or video footage capturing multiple viewpoints around the object.</font></p>
 
-          <a class="btn btn-primary btn-sm" style="margin-top:3px" href="https://jcorsetti.github.io/oryon/"><i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong></a>
-          <a class="btn btn-primary btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00690"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/oryon"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://jcorsetti.github.io/oryon/">
+            <i class="fa fa-globe"></i>&nbsp;&nbsp;<strong>webpage</strong>
+          </a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00690">
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong>
+          </a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/oryon">
+            <i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong>
+          </a>
+          <a class="btn btn-outline-dark btn-sm" href="data/ref/corsetti2024oryon.bib">
+            <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;<strong>reference</strong>
+          </a>
 
           <!-- 
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -155,10 +169,10 @@
           <p class="mb-1">Mohamed L. Mekhalfi, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2023</p>
 
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2308.15353">
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2308.15353">
             <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong>
           </a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/mohamedtev/daca">
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/mohamedtev/daca">
             <i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong>
           </a>
 
@@ -192,8 +206,8 @@
             &mdash; <font color="#a21a2a">Held in conjunction with ICCV 2023</font></p>
           <!-- <p class="mb-1"><font color="#899499">TLDR: TBD.</font></p> -->
 
-          <a class="btn btn-primary btn-sm" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
-          <a class="btn btn-primary btn-sm" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2307.15514"><i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;<strong>arxiv</strong></a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/jcorsetti/FCGF6D"><i class="fa fa-github"></i>&nbsp;&nbsp;<strong>code</strong></a>
           <p></p>
         </li>
 
