--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"><strong>About</strong></a>
+              <a class="nav-link active" aria-current="page" href="index.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="publications.html">Publications</a>
