--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
               <a class="nav-link" aria-current="page" href="index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="publications.html"><strong>Publications</strong></a>
+              <a class="nav-link active" href="publications.html">Publications</a>
             </li>
           </ul>
         </div>
