--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Davide Boscaini</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   </head>
 
   <body>
@@ -43,9 +44,12 @@
           and a Bachelor's degree in Applied Mathematics from the same institution in 2010.</p>
         <p class="fs-5">In my free time, I like <a href="https://www.goodreads.com/user/show/140273804-davide-boscaini">reading books</a> and
           <a href="https://boardgamegeek.com/user/Verig">playing boardgames</a>.</p>
-        <p class="fs-5">If you want to know more about me, you can have a look at my <a href="data/cv.pdf">cv</a>.</p>
+        <p class="fs-5">If you want to know more about me, you can have a look at my  <a href="data/cv.pdf">cv</a>
+          or at my <a href="https://www.linkedin.com/in/davide-boscaini-4715b52a3/">LinkedIn page</a>.</p>
 
-        <!--Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p>-->
+        <!-- Most of the time, I try to solve 3D Computer Vision problems by developing suitable <a href="https://geometricdeeplearning.com">Geometric Deep Learning</a> methods.</p> -->
+        <!-- <i class="fa fa-file"></i> -->
+        <!-- <i class="fa fa-linkedin"></i> -->
 
         <hr class="col-1 my-4">
 
