--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,7 @@
 
     <div class="container my-5">
 
+
       <h2>Bibliometrics</h2>
       <div class="container">
         <a class="btn btn-outline-dark btn-sm" href="https://scholar.google.com/citations?user=dT1N2IUAAAAJ&amp;hl=en&amp;oi=ao">
@@ -56,6 +57,30 @@
       <hr class="col col-lg-2">
       <ul class="list-group list-group-flush">
         <h3>2024</h3>
+
+        <!-- ECCV 2024 -->
+        <li class="list-group-item list-group-item-action">
+          <figure class="figure">
+            <img src="data/thumb/2024_ECCV_FreeZe.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+          </figure>
+          <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+            <h5 class="mb-1">FreeZe: Training-free zero-shot 6D pose estimation with geometric and vision foundation models</h5>
+          </div>
+          <p class="mb-1">Andrea Caraffa, <strong>Davide Boscaini</strong>, Amir Hamza, Fabio Poiesi</p>
+          <p class="mb-1"><i>European Conference on Computer Vision (ECCV)</i>, 2024</p>
+            <!-- &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font></p> -->
+          <p class="mb-1"><font color="#899499">Awards: An early version of this work won the ``Best method on TUD-L dataset'' award at the BOP Challenge 2023.</font></p>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://andreacaraffa.github.io/freeze/">
+            <i class="fa fa-globe"></i>&nbsp;&nbsp;webpage
+          </a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2312.00947">
+            <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
+          </a>
+          <!-- <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/andreacaraffa/freeze">
+            <i class="fa fa-github"></i>&nbsp;&nbsp;code
+          </a> -->
+          <p></p>
+        </li>
 
         <!-- CVPR 2024 -->
         <li class="list-group-item list-group-item-action">
